Added notifyIcon to the AutoTester.

--- a/BScPCG/AutoTester/Form1.resx
+++ b/BScPCG/AutoTester/Form1.resx
@@ -126,4 +126,27 @@
   <metadata name="saveFileDialog.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>264, 17</value>
   </metadata>
+  <metadata name="notifyIcon.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>393, 17</value>
+  </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="notifyIcon.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAEBAAAAAAGABoAwAAFgAAACgAAAAQAAAAIAAAAAEAGAAAAAAAAAMAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADMZgDMZgAAAAAAAAAAAAAAAADM
+        ZgDMZgAAAAAAAADMZgDMZgAAAAAAAAAAAAD/zAD/zADMZgAAAAAAAAAAAAD/zAD/zADMZgAAAAD/zGb/
+        zADMZgAAAAAAAAAAAAD/zAD/zADMZgDMZgDMZgDMZgD/zAD/zADMZgAAAAD/zGb/zADMZgAAAAAAAAAA
+        AAAAAAD/zAD/zAD/zAD/zAD/zAD/zADMZgAAAAAAAAD/zGb/zADMZgAAAAAAAAAAAAAAAAD/zAD/zADM
+        ZgAAAAD/zAD/zADMZgAAAAAAAAD/zGb/zADMZgAAAAAAAAAAAAAAAAD/zAD/zADMZgAAAAD/zAD/zADM
+        ZgAAAAAAAAD/zGb/zADMZgAAAAAAAAAAAAAAAAAAAAD/zADMZgAAAAD/zADMZgAAAAAAAAAAAAD/zGb/
+        zADMZgAAAAAAAAAAAAAAAAAAAAD/zAD/zAD/zAD/zADMZgAAAAAAAAAAAAD/zGb/zADMZgAAAAAAAAAA
+        AAAAAAAAAAD/zAD/zAD/zAD/zADMZgAAAAAAAAAAAAD/zGb/zADMZgAAAAAAAAAAAAAAAAAAAAAAAAD/
+        zAD/zADMZgAAAAAAAADMZgDMZgD/zGb/zADMZgDMZgDMZgDMZgAAAAAAAAAAAAD/zAD/zADMZgAAAAD/
+        zGb/zAD/zAD/zAD/zAD/zAD/zAD/zADMZgAAAAAAAAAAAAD/zGb/zGYAAAAAAAD/zGb/zGb/zGb/zGb/
+        zGb/zGb/zGb/zGbMZgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD//wAA//8AAJ5n
+        AAAcRwAAAEcAAIDHAACIxwAAiMcAAMnHAADBxwAAwccAAOMAAADiAAAA5gAAAP//AAD//wAA
+</value>
+  </data>
 </root>
