Added include statements in the thesis LaTeX file.

--- a/LaTeX/thesis.tex
+++ b/LaTeX/thesis.tex
@@ -17,12 +17,11 @@
 	
 	\pagenumbering{arabic}
 	
-	% Body of work
-	\section{Section}
-	Hello, World!
+	% Abstract
+	\include{abstract}
 	
-	\subsection{Subsection}
-	This is a sub section.\cite{DummyCitation}
+	% Introduction
+	\include{introduction}
 	
 	% References
 	\newpage
