LaTeX - Added all LaTeX documents.

--- a/LaTeX/thesis.tex
+++ b/LaTeX/thesis.tex
@@ -11,17 +11,35 @@
 	\maketitle
 	\newpage
 	
+	% Abstract
+	\include{abstract}
+	
 	% Table of contents
 	\tableofcontents
 	\newpage
 	
 	\pagenumbering{arabic}
 	
-	% Abstract
-	\include{abstract}
-	
 	% Introduction
 	\include{introduction}
+	
+	% Related work
+	\include{related_work}
+	
+	% Theoretical framework
+	\include{theoretical_framework}
+	
+	% Method
+	\include{method}
+	
+	% Results
+	\include{results}
+	
+	% Discussion
+	\include{discussion}
+	
+	% Conclusion
+	\include{conclusion}
 	
 	% References
 	\newpage
