Latex - working on introduction and testing formatting in thesis.tex

--- a/LaTeX/introduction.tex
+++ b/LaTeX/introduction.tex
@@ -1,2 +1,34 @@
 \section{Introduction}
-This is some introduction text
+\subsection{Introduction}
+Exploring a huge open world environment is a desirable feature in games. But creating a big open city such as in the Grand Theft Auto series and Batman: Arkham City involves years of work for a lot of people. Making big open cities in games is simply not feasible for most game companies. These games all have massive success with their big open worlds making a feasible generated city an attractive technique for smaller companies to be able to compete with big open worlds of their own.
+\par
+Content creation requires creativity and time, these are both scarce resources which is why we need technology to help with this process.
+To create massive amounts of content without a big workforce algorithmically based solutions exist, Procedural Content Generation (PCG). PCG was in the past used to minimize the disk space required for games. .kkrieger is an  example of this. It has since evolved into a method to minimize workforce required for content. No man’s sky is an example of a game using PCG to minimize workforce while maximizing content.
+\par
+Procedural content generation is a large subject covering many different techniques. Games such as No mans sky (ref) are using PCG to generate an entire galaxy of 18 quintillion (18,446,744,073,709,551,616) (nomanssky.gamepedia.com/Planet) different planets complete with plants, animals, animations, biomes and sounds. While other games such as Borderlands (ref) uses PCG to generate over different 17,750,000 guns (borderlands.wikia.com/wiki/Weapons). Civilization IV, Minecraft and Spelunky are examples of games generating different game environments both in 2D and 3D using PCG. Minecrafts world being eight times bigger than the surface of the earth (minecraft.gamepedia.com/The\_Overworld). With enormous amounts of content like these examples we can see why handcrafting this would not be feasible nad PCG is an attractive creative method.
+\par
+Lots of work has been done in the field of PCG and it has been used within games for a long time, one of the earlies examples of a game using PCG is Elite(ref) from 1984. But no singular PCG solution has yet to be found, this may be attributed to the wastly different areas of use.
+\par
+In this thesis we are investigating the possibility of procedurally generating a city with Perlin noise that would be viable within a game. An implementation attempting to create such a city will be made and investigated through a user study along with data collection from the implementation.
+
+\subsection{background}
+Varför gör vi en pcg stad
+varför just Perlin.
+Finns många andra svåra tekniker.
+Vi vill va snabba.
+
+\subsection{Procedural content generation}
+vad är PCG egentligen
+
+\subsection{City generation}
+Vad är en stad och varför vill vi generera den.
+
+\subsection{Problem statement}
+Vad är problemet vi försöker lösa i vår thesis.
+
+\subsection{Objectives}
+Målet med vår thesis
+
+\subsection{Research question}
+Can Perlin noise be used in a hierarchical manner to procedurally generate a city viable in games?
+\\
