LaTeX subsections added

--- a/LaTeX/conclusion.tex
+++ b/LaTeX/conclusion.tex
@@ -1,2 +1,6 @@
-\section{Conclusion}
-This is our conclusion
+\section{Conclusion and future work}
+\subsection{Conclusion}
+PCG is greatest.
+
+\subsection{Future work}
+Better techniques, more control.
