--- a/LaTeX/method.tex
+++ b/LaTeX/method.tex
@@ -1,2 +1,9 @@
 \section{Method}
-This is the method
+\subsection{Implementation}
+Low level, opengl/QT - sexig bild?
+
+\subsection{City generation method}
+High och low level / distrikt, vägar, hus
+
+\subsection{Data collection}
+Vilken data / hur mycket / hur samlas den
