--- a/LaTeX/theoretical_framework.tex
+++ b/LaTeX/theoretical_framework.tex
@@ -1,4 +1,7 @@
 \section{Theoretical Framework}
-This is theoretical framework
+\subsection{Perlin noise}
+\subsection{Online vs offline}
+\subsection{Feasibility}
+\subsection{Evaluation}
 
 \cite{DummyCitation}
