--- a/LaTeX/discussion.tex
+++ b/LaTeX/discussion.tex
@@ -1,2 +1,4 @@
 \section{Discussion}
-This is the discussion
+\subsection{Data and user study analysis}
+\subsection{Implementation analysis}
+\subsection{City analysis}
